--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/aaron-lopez22/cse-341-project3#readme",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongodb": "^6.18.0"
+    "mongodb": "^6.18.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
