--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "mongodb": "^6.18.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
